crates/keron-lang/tests/corpus/errors/check/resource_does_not_narrow.keron

val r: Resource = symlink(source = "b", target = "a")
val s: Symlink = r
